working but with mem issues

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,21 +1,17 @@
-CC=gcc
-FLAGS=-g -o
-EXECUTABLE=pseudoshell
+# Makefile for the pseudo-shell executable program
+all : pseudo-shell
+	
 
-
-all: $(EXECUTABLE)
-
-pseudoshell: command.o main.o string_parser.o
-	$(CC) ${FLAGS) $@ $^
-
-command.o: command.c command.h
-	$(CC) -c $<
-
-%.0: %.c 
-	$(CC) -c $^
-
+pseudo-shell: main.o string_parser.o command.o
+	gcc -g -o pseudo-shell main.o string_parser.o command.o
+	
+main.o: main.c
+	gcc -g -c main.c
+	
 string_parser.o: string_parser.c string_parser.h
-	$(CC) -c $<
-
+	gcc -g -c string_parser.c
+command.o: command.c command.h
+	gcc -g -c command.c
+	
 clean:
-	rm -f *.o $(EXECUTABLE)
+	rm -f core *.o pseudo-shell
