--- a/project3/part2/Makefile
+++ b/project3/part2/Makefile
@@ -1,5 +1,12 @@
-all:
-	gcc -g -pthread park.c -o park
+# Makefile for Duck Park Project
+CC = gcc
+CFLAGS = -g -pthread -lpthread
+TARGET = park
+
+all: $(TARGET)
+
+$(TARGET): park.c
+	$(CC) $(CFLAGS) -o $(TARGET) park.c
 
 clean:
-	rm -f park
+	rm -f $(TARGET)
